[package]
name = "openai2ollama_api"
version = "0.1.0"
edition = "2021"
description = "API proxy tool that converts OpenAI API calls to Ollama API"
authors = ["xkeyC"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["form"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
tower-http = { version = "0.5", features = ["cors"] }
bytes = "1.5"
once_cell = "1.18"
tokio-stream = "0.1"
async-stream = "0.3"
chrono = "0.4.41"
md5 = "0.7.0"
tower = "0.5.2"
hyper = "1.6.0"
serde_urlencoded = "0.7.1"
